Add cmake support to openmp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 2.8)
 project(image-filtering)
 
 set(ROOT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
@@ -19,6 +19,10 @@ add_executable(filtering
         ${SRC_DIRECTORY}/openbsd-reallocarray.c
         ${SRC_DIRECTORY}/quantize.c
         )
+
+# OpenMP support
+find_package(OpenMP)
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS} -O3")
 
 # MPI support
 find_package(MPI)
